--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ body {
 }
 a {
 	text-decoration: none;
-	color:#FF444A;
+	color:#2EB3D2;
 }
 	a:hover {text-decoration: underline;}
 .wrap {
@@ -44,14 +44,136 @@ a {
 	text-align: center;
 	margin:20px auto;
 }
+#header {
+	width: 100%;
+}
+	#header .wrap {
+		padding:40px 0px;
+		border-bottom:1px solid #E5E5E5;
+	}
+	#header .logo {
+		width:192px;
+		height: auto;
+		display: block;
+		margin:0px auto;
+	}
+#container {
+	width: 100%;
+	max-width: 980px;
+	margin:40px auto;
+}
+	#presentation {
+		text-align: center;
+		margin-bottom:40px;
+	}
+	#presentation .title {
+		color:#333333;
+		font-size: 50px;
+		font-weight: 200;
+	}
+	#presentation .subtitle {
+		color:#999999;
+		font-size: 25px;
+		font-weight: 100;
+	}
+	#presentation .subtitle.desc {
+		font-size:20px;
+		width: 640px;
+		margin:10px auto;
+	}
+	#urls {
+		border-bottom:1px solid #E5E5E5;
+		border-top:1px solid #E5E5E5;
+		padding:20px;
+		margin-bottom:40px;
+	}
+		#urls .url {margin:20px auto;}
+		#urls .url-type {
+			font-size: 20px;
+			text-transform: uppercase;
+			width: 130px;
+			display: inline-block;
+		}
+		#urls a {
+			font-size:30px;
+			width: 700px;
+			display: inline-block;
+		}
+		#urls a.button {
+			height: 40px;
+			line-height: 40px;
+			background: #2EB3D2;
+			border:0px;
+			font-size: 17px;
+			color:#fff;
+			font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+			font-weight: 100;
+			text-transform: lowercase;
+			display: inline-block;
+			float:right;
+			padding:0px 10px;
+			width: 55px;
+			text-align: center;
+		}
+	#preferences {
+		width: 100%;
+		max-width: 640px;
+		margin:0px auto 150px auto;
+	}
+		#preferences p {margin-bottom:30px;}
+		#preferences label {
+			display: block;
+			color:#333333;
+			font-size: 20px;
+			margin:0px 0px 10px 5px;
+		}
+		#preferences input[type=text], #preferences textarea {
+			width: 100%;
+			border:1px solid #E5E5E5;
+			color:#999999;
+			font-size: 20px;
+			padding:5px;
+			line-height: 38px;
+			font-weight: 100;
+			height: 38px;
+			box-sizing:border-box;
+			box-sizing:border-box;
+		}
+		#preferences textarea {
+			height:200px;
+			font-size:15px;
+			line-height: 20px;
+		}
+
+		input[type=submit] {
+			float:right;
+			height: 40px;
+			line-height: 40px;
+			background: #2EB3D2;
+			border:0px;
+			font-size: 17px;
+			color:#fff;
+			padding:0px 10px;
+			font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+			font-weight: 100;
+			text-transform: lowercase;
+			width: 145px;
+		}
+		.hint {
+			margin:5px;
+			font-style:italic;
+			color:#CCCCCC;
+		}
 .home #header {
 	padding:1px;
-	width: 100%;
 	background:url('../images/bg-header.jpg') no-repeat transparent center bottom;
 	padding-bottom:30px;
 }
+	.home #header .wrap {
+		padding:0px;
+		border:0px;
+	}
 	.home #header .logo {
-		display: block;
 		width: 16%;
 		margin:40px auto;
 	}
@@ -104,7 +226,7 @@ a {
 		float:left;
 		height: 60px;
 		line-height: 60px;
-		background: #FF444A;
+		background: #2EB3D2;
 		border:0px;
 		font-size: 21px;
 		color:#fff;
@@ -168,7 +290,8 @@ a {
 			color:#FF444B;
 			margin-bottom:10px;
 		}
-.home #footer {
+#footer a {color:#FF444A;}
+#footer {
 	position: fixed;
 	bottom:0px;
 	width: 100%;
@@ -177,11 +300,11 @@ a {
 
 	transition: all 0.1s linear;
 }
-	.home #footer .wrap {
+	#footer .wrap {
 		transition: all 0.1s linear;
 		padding:20px 0px;
 		box-sizing:border-box;
 		-moz-box-sizing:border-box;
 	}
-	.home #footer .copy {float:right;}
-	.home #footer:hover .wrap {padding:30px 10px; }
+	#footer .copy {float:right;}
+	#footer:hover .wrap {padding:30px 10px; }
