--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,33 @@
 ::-moz-placeholder { color:#E5E5E5;}
 :-ms-input-placeholder { color:#E5E5E5;}
 /* END FIXES */
+@font-face {
+	font-family: 'vlistus';
+	src:url('../fonts/icomoon.eot');
+	src:url('../fonts/icomoon.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/icomoon.woff') format('woff'),
+		url('../fonts/icomoon.ttf') format('truetype'),
+		url('../fonts/icomoon.svg#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+.icon-admin:before, .icon-collab:before, .icon-play:before, .icon-wrong:before, .icon-right:before, .icon-heart:before {
+	font-family: 'vlistus';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+	-webkit-font-smoothing: antialiased;
+	padding-right:10px;
+}
+.icon-admin:before { content: "\61"; }
+.icon-collab:before { content: "\73"; }
+.icon-play:before { content: "\70"; }
+.icon-wrong:before { content: "\77"; }
+.icon-right:before { content: "\72"; }
+.icon-heart:before { content: "\68"; }
 body {
 	font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
 	font-weight: 100;
