--- a/css/styles.css
+++ b/css/styles.css
@@ -93,6 +93,10 @@ a {
 		text-align: center;
 		margin-bottom:40px;
 	}
+		#presentation i {
+			color:#FF444A;
+			font-size: 55px;
+		}
 	#presentation .title {
 		color:#333333;
 		font-size: 50px;
@@ -119,6 +123,14 @@ a {
 			font-size: 20px;
 			text-transform: uppercase;
 			width: 130px;
+			display: inline-block;
+			line-height: 20px;
+		}
+		#urls .url-type:before {
+			margin-right:10px;
+			border-right:1px solid #E5E5E5;
+			font-size:15px;
+			line-height: 20px;
 			display: inline-block;
 		}
 		#urls a {
@@ -317,6 +329,60 @@ a {
 			color:#FF444B;
 			margin-bottom:10px;
 		}
+.overlay {
+	position: fixed;
+	top:0px;
+	left:0px;
+	width: 100%;
+	height: 100%;
+	z-index:100;
+}
+.popup {
+	z-index:110;
+	display:none;
+	border:1px solid #E5E5E5;
+	position: fixed;
+	width:50%;
+	padding:50px;
+	top:-1px;
+	left:50%;
+	margin-left:-25%;
+	box-sizing:border-box;
+	-moz-box-sizing:border-box;
+	background: #fff
+}
+	.popup h2 {
+		color:#333333;
+		font-size: 30px;
+		font-weight: 200;
+		text-align: center;
+		margin-bottom:30px;
+	}
+	.popup input {
+		font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+		border:1px solid #E5E5E5;
+		font-size: 30px;
+		padding:10px;
+		line-height: 48px;
+		font-weight: 100;
+		height: 48px;
+		float: left;
+		margin-right:10px;
+		width: 100%;
+		margin-bottom:40px;
+		box-sizing:border-box;
+		-moz-box-sizing:border-box;
+	}
+	.popup ul {
+		width:100%;
+		text-align: center;
+	}
+	.popup ul li {
+		display: inline;
+		list-style: none;
+		margin:0px 20px;
+
+	}
 #footer a {color:#FF444A;}
 #footer {
 	position: fixed;
